Bug 90960 - EDITING: soffice(Calc) crashes when entering CR at end of comment that was just copy/paste'd
Summary: EDITING: soffice(Calc) crashes when entering CR at end of comment that was ju...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.5.0 release
Hardware: x86-64 (AMD64) Linux (All)
: high critical
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.1.0 target:5.0.0.0.beta2 tar...
Keywords: haveBacktrace
: 85965 (view as bug list)
Depends on:
Blocks:
 
Reported: 2015-04-30 12:51 UTC by Marc Bessières
Modified: 2016-10-25 19:24 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
backtrace of the crash (46.75 KB, text/plain)
2015-04-30 12:51 UTC, Marc Bessières
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Marc Bessières 2015-04-30 12:51:00 UTC
Created attachment 115216 [details]
backtrace of the crash

soffice(Calc) crashes when entering CR at end of comment that was just copy/paste'd

Steps to reproduce:
- start LibreOffice
- create a new Calc Spreadsheet
- add a comment in any cell (e.g. A1 with Insert -> Comment and type anything like "comment")
- select that cell A1
- copy that cell C-c
- paste that cell in another cell (e.g. A2)
- select the new cell
- right click in the new cell and select "Show Comment"
- double click in the comment to have the cursor
- put the cursor at the end of the comment with the "end" key
- press "Enter"
- see Calc crash after a few seconds

I couldn't reproduce the bug with OpenOffice.org 3.2.0
I could reproduce the bug with
LibreOffice 4.2.3.6
LibreOffice 4.2.6.2
LibreOffice 4.3.7.1
LibreOffice 4.4.3.1

And a development build for which I could get the debug symbols.

Version: 5.0.0.0.alpha1+
Build ID: 0cd88d27ecd87c8c5791418bcac6ab1684ece74a
TinderBox: Linux-rpm_deb-x86_64@46-TDF-dbg, Branch:master, Time: 2015-04-30_00:38:48
Locale: C

I'm attaching the backtrace of the crash with the TinderBox build
Comment 1 raal 2015-04-30 13:29:50 UTC
I can confirm with Version: 5.0.0.0.alpha1+
Build ID: 59adad74084e9281887e3f78a225794f37b784d7
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2015-04-29_12:40:39

crash also in LO 3.5
Comment 2 Commit Notification 2015-05-28 12:02:25 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7b75dc8ccca61988392779d4c61eef15f1211c16

Resolves: tdf#90960 toggle out of paste-mode on editing an object

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2015-05-28 12:03:48 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ad90d924ad5b29cd2209ef8b9217ae9377f85870&h=libreoffice-5-0

Resolves: tdf#90960 toggle out of paste-mode on editing an object

It will be available in 5.0.0.0.beta2.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 4 Caolán McNamara 2015-05-28 12:27:27 UTC
*** Bug 85965 has been marked as a duplicate of this bug. ***
Comment 5 Marc Bessières 2015-05-29 14:46:28 UTC
Thank you for the fix, I confirm it works.
May I dare asking if this could be backported to 4.4?
The fix seems well localized, so not too dangerous.

Shall I put the bug in CLOSED status as I'm the originator? I'm unsure about the QA practices here.

Cheers,
Marc
Comment 6 raal 2015-05-29 15:11:16 UTC
(In reply to Marc Bessières from comment #5)
> Thank you for the fix, I confirm it works.

=> Verified

> May I dare asking if this could be backported to 4.4?

=> BackportRequest:4.4

> The fix seems well localized, so not too dangerous.
> 
> Shall I put the bug in CLOSED status as I'm the originator? I'm unsure about
> the QA practices here.
> 
> Cheers,
> Marc

Thanks for test
Comment 7 Caolán McNamara 2015-05-29 19:06:15 UTC
already proposed for 4-4 as https://gerrit.libreoffice.org/#/c/15942/
Comment 8 Marc Bessières 2015-06-03 10:54:55 UTC
(In reply to Caolán McNamara from comment #7)
> already proposed for 4-4 as https://gerrit.libreoffice.org/#/c/15942/

Thank you Caolan very much.
Waiting for its acceptance then
Comment 9 Commit Notification 2015-06-09 20:58:35 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5f02e2eb1214efdb4a09f92458838528d07acc6c&h=libreoffice-4-4

Resolves: tdf#90960 toggle out of paste-mode on editing an object

It will be available in 4.4.5.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.