Resolves: tdf#90960 toggle out of paste-mode on editing an object

otherwise pressing return in the object goes to the
sheet and attempts to paste over the current cell

reproduce with insert->comment in A1, insert some text and
click in e.g. A5, ctrl c, right click on A1 and show comment,
double click on comment to edit, go to end of text and
press enter, either "bad things happen" if a11y is enabled
, or "nothing happens" instead of a new line appearing in
the object

Change-Id: Ie44851cf3394652e1a60eecb59a999889094b3c5
(cherry picked from commit 7b75dc8ccca61988392779d4c61eef15f1211c16)